--- a/web/languages/en_US.json
+++ b/web/languages/en_US.json
@@ -7,6 +7,7 @@
   "page.role.suffix":"Role List",
   "page.privilege.suffix":"Privilege List",
 
+  "user.title":"User",
   "user.uesrId": "ID",
   "user.loginName":"Login Name",
   "user.realName":"Real Name",
