--- a/web/languages/en_US.json
+++ b/web/languages/en_US.json
@@ -13,6 +13,8 @@
   "common.cancel":"Cancel",
   "common.Approve":"Approve",
   "common.language":"Language",
+  "common.status":"Status",
+  "common.home":"Home",
 
   "page.user.suffix":"User List",
   "page.role.suffix":"Role List",
@@ -20,11 +22,14 @@
 
   "user.title":"User",
   "user.uesrId": "ID",
-  "user.loginName":"Login Name",
-  "user.realName":"Real Name",
+  "user.username":"User Name",
   "user.email":"Email",
   "language.english":"English",
   "language.chinese":"Chinese",
+  "user.status":"Status",
+  "user.mobile":"Mobile",
+  "user.createUser":"Created By",
+  "user.createTime":"Created Time",
 
   "menu.name":"Name",
   "menu.code":"Code",
